tests/files/flow_controller_tests/should_run/112.cmdr
x = 0.5;
print arcsech(x);