tests/files/flow_controller_tests/should_fail/107.cmdr
x = "cat";
print arcsech(x);